fixed spacing and bundled

--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,8 @@ body {
   width: 300px;
   text-wrap: wrap;
   margin: auto;
-
+  color:#2A5955;
+  background-color: #EBF0F3;
  }
 
 
